--- a/table-of-contents.adoc
+++ b/table-of-contents.adoc
@@ -20,4 +20,5 @@ toc::[]
 ### Heading numbers for you
 ### And maybe a TOC if I did it right
 
+link:editing-asciidoc.adoc[Next: Editing AsciiDoc]
  
