underlining is broken on GH

--- a/basic-syntax.adoc
+++ b/basic-syntax.adoc
@@ -3,7 +3,8 @@
 ....
  *bold* _italic_ 
  `literal text`
- [underline]#don't ask me why underling has its own rule#
+ [underline]#don't ask me why underling has its own rule# (or why it doesn't work on GitHub)
+
  There are more options too. You can go link:http://methods.co.nz/asciidoc/userguide.html#X96[hog wild] if you want
 ....
  
@@ -11,7 +12,8 @@
  
 *bold* _italic_ 
 `literal text`
-[underline]#don't ask me why underling has its own rule#
+[underline]#don't ask me why underling has its own rule# (or why it doesn't work on GitHub)
+
 There are more options too. You can go link:http://methods.co.nz/asciidoc/userguide.html#X96[hog wild] if you want
 
 link:bullets-numbering.adoc[Next: Bullets and Numbering]
