--- a/linking.adoc
+++ b/linking.adoc
@@ -19,4 +19,4 @@ so you can <<anchors,link>> to them.
 link:https://github.com/jyutzler/asciidoc-tutorial[Hyperlinks are supported too]
 (but you already knew that).
  
- 
+link:includes.adoc[Next: Includes]
