--- a/includes.adoc
+++ b/includes.adoc
@@ -1,18 +1,21 @@
 ## Includes
 
 ....
+ You can include another file.
  For safety, separate includes with a newline.
  
  include::introduction.adoc[]
 ....
 
 You can include another file.
+For safety, separate includes with a newline.
 
 include::introduction.adoc[]
 
 [WARNING]
 ====
-GitLab and GitHub do not support includes in their inline rendering.
+GitLab and GitHub do not support includes in their inline rendering 
+but they at least show up as links.
 ====
 
 link:tables.adoc[Next: Tables]
