--- a/bullets-numbering.adoc
+++ b/bullets-numbering.adoc
@@ -23,7 +23,7 @@ Separate bullet blocks with newlines.
 
 . AsciiDoc will auto-number for you
 . Isn't that nice?
-** Even if you
-... Have to go to multiple levels
+.. Even if you
+*** Have to go to multiple levels
 
 link:linking.adoc[Next: Linking]
