--- a/generating.adoc
+++ b/generating.adoc
@@ -14,3 +14,5 @@ These are two separate tools, available in a package manager near you.
 ====
 
 ## The End
+
+link:editing-asciidoc.adoc[Previous: Editing AsciiDoc]
