--- a/why-asciidoc.adoc
+++ b/why-asciidoc.adoc
@@ -1,6 +1,6 @@
-## What AsciiDoc Is
+## Why Use AsciiDoc
 
-* A formatting language for documents
+* AsciiDoc is a formatting language for documents
 ** Can be used to generate HTML, PDF, and others
 * Designed for creating documents of _medium_ complexity
 ** For documents that are one chapter or less, MarkDown is easier to work with
